feat: :sparkles: Add integration model of blender

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="assets/css/custom.css">
 
     <!-- Load fonts style after rendering the layout styles -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
     <link rel="stylesheet" href="assets/css/fontawesome.min.css">
 
 </head>
@@ -27,8 +28,8 @@
             <a class="navbar-brand text-success logo h1 align-self-center" href="index.html">
                 MUSCLEWIKI 3D
             </a>
-            
-        <!--
+
+            <!--
             <div class="align-self-center collapse navbar-collapse flex-fill  d-lg-flex justify-content-lg-between" id="templatemo_main_nav">
                 <div class="flex-fill">
                     <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
@@ -70,26 +71,32 @@
                                 <h1 class="h1 text-success"><b>Musclewiki</b> 3D</h1>
                                 <h3 class="h2">Anatomía y Biomecanica</h3>
                                 <p>
-                                    MuscleWiki es una plataforma online que ofrece ejercicios y guías rápidas para entrenar diferentes grupos musculares, adaptada tanto para principiantes como avanzados. Incluye videos, descripciones y consejos sobre técnica y ejecución de movimientos para mejorar el rendimiento y la forma física.
+                                    MuscleWiki es una plataforma online que ofrece ejercicios y guías rápidas para
+                                    entrenar diferentes grupos musculares, adaptada tanto para principiantes como
+                                    avanzados. Incluye videos, descripciones y consejos sobre técnica y ejecución de
+                                    movimientos para mejorar el rendimiento y la forma física.
                                 </p>
+                                <button class="btn btn-primary rounded-pill" onclick="window.location.href='model.html'">Iniciar</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <a class="carousel-control-prev text-decoration-none w-auto ps-3" href="#template-mo-zay-hero-carousel" role="button" data-bs-slide="prev">
+        <a class="carousel-control-prev text-decoration-none w-auto ps-3" href="#template-mo-zay-hero-carousel"
+            role="button" data-bs-slide="prev">
             <i class="fas fa-chevron-left"></i>
         </a>
-        <a class="carousel-control-next text-decoration-none w-auto pe-3" href="#template-mo-zay-hero-carousel" role="button" data-bs-slide="next">
+        <a class="carousel-control-next text-decoration-none w-auto pe-3" href="#template-mo-zay-hero-carousel"
+            role="button" data-bs-slide="next">
             <i class="fas fa-chevron-right"></i>
         </a>
     </div>
     <!-- End Banner Hero -->
 
-    
+
     <!-- Start Categories of The Month -->
-     <!--
+    <!--
     <section class="container py-5">
         <div class="row text-center pt-3">
             <div class="col-lg-6 m-auto">
@@ -123,7 +130,7 @@
 
 
     <!-- Start Featured Product -->
-     <!--
+    <!--
     <section class="bg-light">
         <div class="container py-5">
             <div class="row text-center py-3">
@@ -312,12 +319,19 @@
     <!-- End Footer -->
 
     <!-- Start Script -->
+    </footer>
+    <!-- End Footer -->
+
+    <!-- Start Script -->
+<!--     <script type="module" src="/main.js"></script> -->
     <script src="assets/js/jquery-1.11.0.min.js"></script>
     <script src="assets/js/jquery-migrate-1.2.1.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/templatemo.js"></script>
     <script src="assets/js/custom.js"></script>
     <!-- End Script -->
+</body>
+<!-- End Script -->
 </body>
 
 </html>
